# SceneDirector-AI

./: .gitignore  CMakeLists.txt  DONATE.md  LICENSE  README.md  README_CN.md  README_JP.md
docs/: BUILD.md
src/: audio-monitor.cpp  audio-monitor.hpp  scene-director-ai.cpp  scene-director-ai.hpp  scene-predictor.cpp  scene-predictor.hpp  websocket-server.cpp  websocket-server.hpp  window-detector.cpp  window-detector.hpp
